--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ProperTree"]
 	path = ProperTree
 	url = https://github.com/corpnewt/ProperTree.git
+[submodule "GenSMBIOS"]
+	path = GenSMBIOS
+	url = https://github.com/corpnewt/GenSMBIOS.git
