Add Ps2KeyboardDxe and Ps2MouseDxe

--- a/config.plist
+++ b/config.plist
@@ -786,6 +786,8 @@
 		<array>
 			<string>HfsPlus.efi</string>
 			<string>OpenRuntime.efi</string>
+			<string>Ps2KeyboardDxe.efi</string>
+			<string>Ps2MouseDxe.efi</string>
 		</array>
 		<key>Input</key>
 		<dict>
