Add null ethernet

--- a/config.plist
+++ b/config.plist
@@ -38,6 +38,14 @@
 				<key>Path</key>
 				<string>SSDT-PNLF.aml</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Null Ethernet Network Driver</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT-RMNE.aml</string>
+			</dict>
 		</array>
 		<key>Delete</key>
 		<array>
