--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "GenSMBIOS"]
 	path = GenSMBIOS
 	url = https://github.com/corpnewt/GenSMBIOS.git
+[submodule "itlwm"]
+	path = itlwm
+	url = https://github.com/zxystd/itlwm.git
