Add MAC address

--- a/config.plist
+++ b/config.plist
@@ -861,7 +861,7 @@
 			<key>MLB</key>
 			<string>C177464034NHMHK1M</string>
 			<key>ROM</key>
-			<data>ESIzRFVm</data>
+			<data>EAK1zHjO</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemProductName</key>
