Add NvmExpressDxe.efi driver

--- a/config.plist
+++ b/config.plist
@@ -671,6 +671,7 @@
 		<key>Drivers</key>
 		<array>
 			<string>HfsPlus.efi</string>
+			<string>NvmExpressDxe.efi</string>
 			<string>OpenRuntime.efi</string>
 		</array>
 		<key>Input</key>
