--- a/config.plist
+++ b/config.plist
@@ -688,7 +688,7 @@
 			<key>ScanPolicy</key>
 			<integer>0</integer>
 			<key>SecureBootModel</key>
-			<string>Default</string>
+			<string>j230k</string>
 			<key>Vault</key>
 			<string>Optional</string>
 		</dict>
